More margin on footer - landingspage + quick fix for jumping menu bar height

--- a/public/theme/europeana-cope/css/screen.css
+++ b/public/theme/europeana-cope/css/screen.css
@@ -613,7 +613,7 @@ footer {
       padding-top: 4.75rem;
       margin-top: 8rem; } }
   body.landingpage footer {
-    margin-top: 0; }
+    margin-top: 2rem; }
 
 .inner-wrap {
   margin: 0 auto;
@@ -901,7 +901,8 @@ nav.main-menu {
       color: #fff;
       text-align: center;
       font-weight: 400;
-      display: block; }
+      display: block;
+      min-height: 27px; }
 
 ul.play-menu {
   border-right: 1px solid #f1f1ee;
