--- a/public/theme/europeana-cope/source/scss/modules/_layout.scss
+++ b/public/theme/europeana-cope/source/scss/modules/_layout.scss
@@ -151,7 +151,7 @@ footer {
     }
 
     body.landingpage & {
-        margin-top: 0;
+        margin-top: 2rem;
     }
 }
 
